--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -358,6 +358,94 @@ selection-background-color: rgb(255, 0, 0);</string>
      <string>Заново</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_easy">
+    <property name="geometry">
+     <rect>
+      <x>51</x>
+      <y>147</y>
+      <width>731</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>30</width>
+      <height>80</height>
+     </size>
+    </property>
+    <property name="toolTip">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;ЛЕГКИЙ УРОВЕНЬ&lt;br/&gt;&lt;br/&gt;ВРМЕНЯ НА ПРОХОЖДЕНИЕ ОПРОСА - 2 МИНУТЫ&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(156,156,156);</string>
+    </property>
+    <property name="text">
+     <string>ЛЕГКИЙ УРОВЕНЬ</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_middle">
+    <property name="geometry">
+     <rect>
+      <x>51</x>
+      <y>290</y>
+      <width>731</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>30</width>
+      <height>80</height>
+     </size>
+    </property>
+    <property name="toolTip">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;СРЕДНИЙ УРОВЕНЬ&lt;br/&gt;&lt;br/&gt;ВРМЕНЯ НА ПРОХОЖДЕНИЕ ОПРОСА - 1 МИНУТА&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(156,156,156);</string>
+    </property>
+    <property name="text">
+     <string>СРЕДНИЙ УРОВЕНЬ</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_hard">
+    <property name="geometry">
+     <rect>
+      <x>51</x>
+      <y>433</y>
+      <width>731</width>
+      <height>80</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>30</width>
+      <height>80</height>
+     </size>
+    </property>
+    <property name="toolTip">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:10pt;&quot;&gt;СЛОЖНЫЙ УРОВЕНЬ&lt;br/&gt;&lt;br/&gt;ВРМЕНЯ НА ПРОХОЖДЕНИЕ ОПРОСА - 30 СЕКУНД&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(156,156,156);</string>
+    </property>
+    <property name="text">
+     <string>СЛОЖНЫЙ УРОВЕНЬ</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>680</y>
+      <width>371</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
